@@ -28,6 +28,8 @@ import(stats)
 import(utils)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowMeans)
+importFrom(Matrix,rowSums)
+importFrom(Matrix,t)
 importFrom(Rcpp,sourceCpp)
 importFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(SummarizedExperiment,SummarizedExperiment)
